--- a/config/archive/env_jupyter.yml
+++ b/config/archive/env_jupyter.yml
@@ -5,8 +5,6 @@ dependencies:
   - numpy
   - plotly
   - matplotlib
-  - openpyxl #for some reason this is necessary
+  - xlsxwriter
   - pip
   - jupyter
-  - pip:
-    - kaleido
