--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,11 @@ output/*
 config/computer_generated/*
 archive/*
 original_preparation_code/*
+
 *.xlsx
 *.csv
+*.html
+
 !master_config.xlsx
 !01_AUS_charts_2022-07-14-1530 - 8thEdition.xlsx
 #01_AUS_charts_2022-07-14-1530.xlsx is an important input for 1_prepare_8th_workbook.py
