--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ original_preparation_code/*
 *.csv
 *.html
 
+!.gitkeep
 !master_config.xlsx
 !01_AUS_charts_2022-07-14-1530 - 8thEdition.xlsx
 #01_AUS_charts_2022-07-14-1530.xlsx is an important input for 1_prepare_8th_workbook.py
