--- a/config/env_9th_visualisation.yml
+++ b/config/env_9th_visualisation.yml
@@ -3,8 +3,8 @@ dependencies:
   - plotly
   - pandas
   - numpy
-  - plotly
   - matplotlib
   - xlsxwriter
   - pip
   - jupyter
+# conda env create --prefix ./env_9th_visualisation --file ./config/env_9th_visualisation.yml
