--- a/config/env_9th_visualisation.yml
+++ b/config/env_9th_visualisation.yml
@@ -7,4 +7,5 @@ dependencies:
   - xlsxwriter
   - pip
   - jupyter
+  - openpyxl #guessing this wil install properly
 # conda env create --prefix ./env_9th_visualisation --file ./config/env_9th_visualisation.yml
